# netket-qsr

./: README.md  pyproject.toml
Examples/: ising1d.py  qsr_iterate.py
netket_qsr/: __init__.py
netket_qsr/driver/: __init__.py  qsr.py
netket_qsr/jax/: __init__.py  alg.py
