[tool.poetry]
name = "netket-qsr"
version = "0.1.0"
description = ""
authors = ["Filippo Vicentini <filippovicentini@gmail.com>"]
readme = "README.md"
packages = [{include = "netket_qsr"}]

[tool.poetry.dependencies]
python = "^3.10"
netket = ">= 3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
